--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -3,19 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="course"
-            type="com.sekhgmainuddin.learnwithfun.data.dto.PopularCourse" />
+            type="com.sekhgmainuddin.learnwithfun.data.dto.PopularCourseDto" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="180dp"
-        android:layout_height="245dp"
+        android:layout_width="165dp"
+        android:layout_height="230dp"
+        android:layout_marginBottom="15dp"
+        android:clickable="true"
         app:cardBackgroundColor="@color/white"
-        app:cardElevation="4dp"
         app:cardCornerRadius="15dp"
-        app:contentPadding="10dp"
-        android:layout_marginBottom="15dp">
+        app:cardElevation="4dp"
+        app:contentPadding="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,31 +28,29 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:elevation="11dp"
-                app:layout_constraintTop_toTopOf="@id/imageCardView"
                 app:layout_constraintBottom_toBottomOf="@id/imageCardView"
-                app:layout_constraintStart_toStartOf="@id/imageCardView"
                 app:layout_constraintEnd_toEndOf="@id/imageCardView"
-                />
+                app:layout_constraintStart_toStartOf="@id/imageCardView"
+                app:layout_constraintTop_toTopOf="@id/imageCardView" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/imageCardView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                app:cardCornerRadius="15dp"
                 app:cardElevation="4dp"
                 app:layout_constraintBottom_toTopOf="@id/guideHorizontalLine50"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:cardCornerRadius="15dp">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/courseImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    app:progressBar="@{progressBar}"
                     app:imageUrl="@{course.courseThumbnail}"
-                    />
+                    app:progressBar="@{progressBar}" />
 
             </com.google.android.material.card.MaterialCardView>
 
@@ -59,59 +59,61 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.55" />
+                app:layout_constraintGuide_percent="0.5" />
 
             <TextView
                 android:id="@+id/specialTagTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/light_science_blue"
                 android:layout_marginTop="10dp"
-                android:text="@{course.tag, default = @string/popular}"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imageCardView"
-                android:textAllCaps="true"
+                android:ellipsize="end"
                 android:maxLines="1"
                 android:paddingHorizontal="10dp"
-                android:ellipsize="end"
+                android:text="@{course.tag, default = @string/popular}"
                 android:textAlignment="center"
-                />
+                android:textAllCaps="true"
+                android:textColor="@color/light_science_blue"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageCardView" />
 
             <TextView
                 android:id="@+id/courseTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:layout_marginTop="5dp"
-                android:text="@{course.courseName, default = @string/course}"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/specialTagTV"
+                android:ellipsize="marquee"
+                android:fadingEdge="horizontal"
+                android:marqueeRepeatLimit="marquee_forever"
                 android:maxLines="1"
-                android:paddingHorizontal="10dp"
-                android:ellipsize="end"
+                app:makeSelectedAutomatically="@{true}"
+                android:singleLine="true"
+                android:paddingHorizontal="5dp"
+                android:scrollHorizontally="true"
+                android:text="@{course.courseName, default = @string/course}"
                 android:textAlignment="center"
-                />
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/specialTagTV" />
 
             <ImageButton
                 android:id="@+id/openCourseDetailButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:tint="@color/white"
-                android:src="@drawable/baseline_navigate_next_24"
-                android:scaleType="centerInside"
-                android:padding="6dp"
-                android:background="@drawable/gradient_button_color_blue"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginVertical="5dp"
-                />
+                android:background="@drawable/gradient_button_color_blue"
+                android:padding="6dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/baseline_navigate_next_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tint="@color/white" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
