--- a/app/src/main/res/layout/popular_courses_horizontal_rv.xml
+++ b/app/src/main/res/layout/popular_courses_horizontal_rv.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/course_item"
+            tools:listitem="@layout/popular_course_item"
             app:layout_constraintTop_toBottomOf="@id/seeAllButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
