--- a/app/src/main/res/layout/fragment_course_tutorial.xml
+++ b/app/src/main/res/layout/fragment_course_tutorial.xml
@@ -4,100 +4,125 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.sekhgmainuddin.learnwithfun.presentation.home.couses.CourseViewModel" />
     </data>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background"
+        tools:context=".presentation.home.courseTutorial.CourseTutorialFragment">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:elevation="0dp">
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:contentInsetStart="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/backButton"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
+                        android:cropToPadding="true"
+                        android:src="@drawable/baseline_close_24"
+                        app:backgroundTint="@color/white"
+                        app:elevation="1dp"
+                        app:fabCustomSize="50dp"
+                        app:maxImageSize="25dp"
+                        app:tint="@color/black" />
+
+                    <TextView
+                        android:id="@+id/tutorName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/noto_sans_semi_bold"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:maxLines="1"
+                        app:full_text="@{@string/by(viewModel.courseDetail.instructorName)}"
+                        app:non_span_style="@{`bold`}"
+                        app:span_color="@{@color/grey}"
+                        app:span_text="@{@string/by_}" />
+
+                </LinearLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                app:contentInsetStart="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/courseTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="10dp"
+                        android:fontFamily="@font/shantellsans_regular"
+                        android:text="@{viewModel.courseDetail.courseName}"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/black"
+                        android:textSize="38sp"
+                        android:textStyle="bold" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/weekRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="30dp"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/course_week_item_layout" />
+
+                </LinearLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/courseContentRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/background"
-            tools:context=".presentation.home.courseTutorial.CourseTutorialFragment">
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/backButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/baseline_close_24"
-                android:cropToPadding="true"
-                app:maxImageSize="25dp"
-                app:tint="@color/black"
-                app:backgroundTint="@color/white"
-                app:elevation="1dp"
-                app:fabCustomSize="50dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                />
-
-            <TextView
-                android:id="@+id/tutorName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:full_text="@{@string/by(viewModel.courseDetail.instructorName)}"
-                app:span_text="@{@string/by_}"
-                app:span_color="@{@color/grey}"
-                app:non_span_style="@{`bold`}"
-                android:textStyle="bold"
-                android:fontFamily="@font/noto_sans_semi_bold"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@id/backButton"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="15dp"
-                android:textAlignment="viewStart"
-                />
-
-            <TextView
-                android:id="@+id/courseTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="10dp"
-                android:text="@{viewModel.courseDetail.courseName}"
-                android:textAlignment="viewStart"
-                android:textColor="@color/black"
-                android:textSize="38sp"
-                android:fontFamily="@font/shantellsans_regular"
-                android:textStyle="bold"
-                android:layout_marginHorizontal="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tutorName" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/weekRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/courseTitle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/course_week_item_layout"
-                android:paddingHorizontal="30dp"
-                android:clipToPadding="false"
-                />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/courseContentRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@id/weekRecyclerView"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="20dp"
-                android:padding="20dp"
-                android:clipToPadding="false"
-                android:orientation="vertical"
-                tools:listitem="@layout/course_content_item"
-                />
+            android:layout_marginTop="20dp"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:padding="20dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/course_content_item" />
 
 
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
